--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,7 +4,9 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+    google_maps_key: '%env(GOOGLE_MAPS_KEY)%'
+    google_drive_key: '%env(GOOGLE_DRIVE_KEY)%'
+    locations_file_id: '%env(LOCATIONS_FILE_ID)%'
 services:
     # default configuration for services in *this* file
     _defaults:
